# jsmv

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  docker-compose.yml  flake.nix  package-lock.json  package.json
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: api_dev.md  api_doc.md  api_epic.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: api_dev.md
.github/workflows/: ci.yml
contracts/: jsmv_bridge.mligo  jsmv_bridge.tz  jsmv_ctez.mligo
crates/jsmv_api/: Cargo.toml
crates/jsmv_api/src/: console.rs  kv.rs  random.rs  todo.rs  urlpattern.rs
crates/jsmv_api/src/encoding/: global.rs  mod.rs  text_decoder.rs  text_encoder.rs
crates/jsmv_api/src/http/: body.rs  header.rs  mod.rs  request.rs  response.rs
crates/jsmv_api/src/stream/: mod.rs
crates/jsmv_api/src/stream/readable/: mod.rs  underlying_source.rs
crates/jsmv_api/src/url/: mod.rs  search_params.rs
crates/jsmv_api/tests/: wpt.rs
crates/jsmv_cli/: Cargo.toml  build.rs
crates/jsmv_cli/src/: config.rs  deploy.rs  jsmv.rs  kv.rs  main.rs  run.rs
crates/jsmv_cli/src/account/: account.rs  mod.rs
crates/jsmv_cli/src/bridge/: deposit.rs
crates/jsmv_cli/src/logs/: mod.rs  trace.rs
crates/jsmv_cli/src/repl/: js_logger.rs  mod.rs
crates/jsmv_cli/src/repl/debug_api/: account.rs  kv.rs  mod.rs
crates/jsmv_cli/src/sandbox/: daemon.rs  mod.rs
crates/jsmv_core/: Cargo.toml
crates/jsmv_core/src/: error.rs  host.rs  iterators.rs  realm.rs
crates/jsmv_core/src/kv/: mod.rs  transaction.rs
crates/jsmv_crypto/: Cargo.toml
crates/jsmv_crypto/src/: error.rs  hash.rs  lib.rs  public_key.rs  public_key_hash.rs  secret_key.rs  signature.rs
crates/jsmv_kernel/: Cargo.toml
crates/jsmv_kernel/src/: inbox.rs  lib.rs
crates/jsmv_node/: Cargo.toml  Dockerfile
crates/jsmv_node/src/: main.rs
crates/jsmv_node/src/services/: accounts.rs  operations.rs
crates/jsmv_node/src/services/logs/: broadcaster.rs  mod.rs
crates/jsmv_proto/: Cargo.toml
crates/jsmv_proto/src/: error.rs  js_logger.rs  operation.rs  receipt.rs  request_logger.rs
crates/jsmv_proto/src/api/: contract.rs  ledger.rs
crates/jsmv_proto/src/context/: account.rs  receipt.rs
crates/jsmv_proto/src/executor/: contract.rs  deposit.rs  mod.rs
crates/jsmv_rollup/: Cargo.toml  Dockerfile  entrypoint.sh
crates/jsmv_rollup/src/: bridge.rs  lib.rs  main.rs  rollup.rs
crates/jsmv_wpt/: Cargo.toml
crates/jsmv_wpt/src/: main.rs
crates/mavkit/: Cargo.toml
crates/mavkit/src/: client.rs  node.rs  rollup.rs  thread.rs
docs/: bridge.md  cli.md  first_steps.md  index.md  installation.md
docs/.vitepress/: config.mjs
docs/api/: console.md  contract.md  encoding.md  headers.md  index.md  kv.md  ledger.md  request.md  response.md  text_decoder.md  text_encoder.md  url.md  url_pattern.md  url_search_params.md
examples/: deploy.js  hello_world.js  hello_world_requests.js  ledger.js  request.js  revert_transaction.js
examples/fa2/: README.md  package.json
examples/fa2/src/: index.ts
examples/fa2/test/: actor.ts  index.ts
examples/hello-world/: package.json  tsconfig.json
nix/: jsmv.nix
