[workspace]
resolver = "2"
members = [
    "crates/jsmv_core",
    "crates/jsmv_api",
    "crates/jsmv_proto",
    "crates/jsmv_crypto",
    "crates/jsmv_kernel",
    "crates/jsmv_cli",
    "crates/jsmv_node",
    "crates/jsmv_wpt",
    "crates/mavkit",
    "crates/jsmv_rollup",
]


[workspace.package]
edition = "2021"
version = "0.1.0"
authors = ["TriliTech <contact@trili.tech>"]
repository = "https://github.com/trilitech/jsmv"

[workspace.dependencies]
jsmv_core = { path = "crates/jsmv_core" }
jsmv_api = { path = "crates/jsmv_api" }
jsmv_kernel = { path = "crates/jsmv_kernel" }
jsmv_proto = { path = "crates/jsmv_proto" }
jsmv_crypto = { path = "crates/jsmv_crypto" }
jsmv_node = { path = "crates/jsmv_node" }
jsmv_cli = { path = "crates/jsmv_cli" }
jsmv_wpt = { path = "crates/jsmv_wpt" }
mavkit = { path = "crates/mavkit" }
jsmv_rollup = { path = "crates/jsmv_rollup" }

[workspace.dependencies.mavryk-smart-rollup]
version = "0.2.2"
default-features = false
features = ["std", "crypto", "panic-hook", "data-encoding", "storage", "proto-alpha"]

[workspace.dependencies.mavryk-smart-rollup-host]
version = "0.2.2"
features = ["proto-alpha"]

[workspace.dependencies.mavryk-smart-rollup-core]
version = "0.2.2"

[workspace.dependencies.mavryk-smart-rollup-mock]
version = "0.2.2"

[workspace.dependencies.mavryk-smart-rollup-encoding]
version = "0.2.2"
default-features = false
features = ["alloc", "mavryk-encoding", "crypto"]

[workspace.dependencies.mavryk-smart-rollup-entrypoint]
version = "0.2.2"

[workspace.dependencies.mavryk-smart-rollup-debug]
version = "0.2.2"

[workspace.dependencies.mavryk-smart-rollup-panic-hook]
version = "0.2.2"

[workspace.dependencies.mavryk-smart-rollup-storage]
version = "0.2.2"

[workspace.dependencies.mavryk-smart-rollup-installer-config]
version = "0.2.2"

[workspace.dependencies.mavryk-smart-rollup-installer]
version = "0.2.2"

[workspace.dependencies.mavryk_crypto_rs]
version = "0.5.2"
default-features = false

[patch.crates-io]
mavryk-smart-rollup = { git = "https://gitlab.com/mavryk-network/mavryk-protocol.git" }
mavryk-smart-rollup-host = { git = "https://gitlab.com/mavryk-network/mavryk-protocol.git" }
mavryk-smart-rollup-core = { git = "https://gitlab.com/mavryk-network/mavryk-protocol.git" }
mavryk-smart-rollup-mock = { git = "https://gitlab.com/mavryk-network/mavryk-protocol.git" }
mavryk-smart-rollup-encoding = { git = "https://gitlab.com/mavryk-network/mavryk-protocol.git" }
mavryk-smart-rollup-entrypoint = { git = "https://gitlab.com/mavryk-network/mavryk-protocol.git" }
mavryk-smart-rollup-debug = { git = "https://gitlab.com/mavryk-network/mavryk-protocol.git" }
mavryk-smart-rollup-panic-hook = { git = "https://gitlab.com/mavryk-network/mavryk-protocol.git" }
mavryk-smart-rollup-storage = { git = "https://gitlab.com/mavryk-network/mavryk-protocol.git" }
boa_ast = { git = "https://github.com/trilitech/boa.git", branch = "sam.finch@/context/expose-instruction-count" }
boa_engine = { git = "https://github.com/trilitech/boa.git", branch = "sam.finch@/context/expose-instruction-count" }
boa_gc = { git = "https://github.com/trilitech/boa.git", branch = "sam.finch@/context/expose-instruction-count" }
boa_interner = { git = "https://github.com/trilitech/boa.git", branch = "sam.finch@/context/expose-instruction-count" }
boa_macros = { git = "https://github.com/trilitech/boa.git", branch = "sam.finch@/context/expose-instruction-count" }
boa_parser = { git = "https://github.com/trilitech/boa.git", branch = "sam.finch@/context/expose-instruction-count" }
boa_profiler = { git = "https://github.com/trilitech/boa.git", branch = "sam.finch@/context/expose-instruction-count" }
