[package]
name = "jsmv_cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
include = ["jsmv_kernel.wasm", "sandbox-params.json", "sandbox.json"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsmv_kernel.workspace = true
jsmv_crypto.workspace = true
jsmv_proto.workspace = true
jsmv_core.workspace = true
jsmv_api.workspace = true
jsmv_rollup.workspace = true
mavkit.workspace = true
clap = { version = "^4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bs58 = "0.5"
hex = "0.4"
dirs = "3.0"
nix = { version = "^0.27.1", features = ["process", "signal"] }
http = "1.0.0"
fs_extra = "1.2"
anyhow = "1.0.75"
daemonize = "0.5.0"
tempfile = "3.9.0"
signal-hook = "0.3.17"
boa_engine = { version = "0.17.0", features = ["fuzz"] }
rustyline = "12.0.0"
mavryk-smart-rollup.workspace = true
mavryk-smart-rollup-mock.workspace = true
serde_yaml = "0.9"
mavryk_crypto_rs.workspace = true
sha2 = "0.10"
rand = "0.8"
tiny-bip39 = "1.0.0"
bincode = "1.3.3"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
derive_more = "0.99.17"
url = "2.2.2"
boa_gc = "0.17.0"
reqwest-eventsource = "0.5.0"
futures-util = "0.3.29"
syntect = "4.6.0"
crossterm = "0.22"
ansi_term = "0.12.1"

[[bin]]
name = "jsmv"
path = "src/main.rs"
