[package]
name = "jsmv_crypto"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
mavryk_crypto_rs.workspace = true
derive_more = "0.99.17"
serde = "1.0.185"
anyhow = "1.0.75"
hex = "0.4.3"
boa_gc = "0.17.0"
serde_json = "1.0.107"

[dev-dependencies]
proptest = "1.1"
