[package]
name = "jsmv_kernel"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
jsmv_core.workspace = true
jsmv_proto.workspace = true
jsmv_crypto.workspace = true
jsmv_api.workspace = true
mavryk-smart-rollup.workspace = true
mavryk_crypto_rs.workspace = true

serde = "1.0.185"
num-traits = "0.2.16"
boa_engine = { version = "0.17.0", features = ["fuzz"] }
http = "1.0.0"
http-serde = "2.0.0"
bincode = "1.3.3"
