[package]
name = "jsmv_rollup"
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
derive_more = "0.99.17"
mavkit.workspace = true
mavryk-smart-rollup-installer-config = { version = "0.2.2", features = [
    "alloc",
] }
mavryk-smart-rollup-installer.workspace = true
mavryk-smart-rollup-host.workspace = true
hex = "0.4.3"
mavryk_crypto_rs.workspace = true
bincode = "1.3.3"
fs_extra = "1.3.0"
figment = { version = "0.10.12", features = ["json", "env"] }
clap = { version = "4.4.10", features = ["derive"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
dirs = "3.0"

[[bin]]
name = "jsmv-rollup"
path = "src/main.rs"
